Experiments with the blue pill to avoid ugly window resize on Firefox/Chrome

--- a/scss/experiment.scss
+++ b/scss/experiment.scss
@@ -177,7 +177,6 @@ p {
   0% {
   	opacity:1.0;
         left: 0pt;
-        right:100%;
   }
 
   50% {
@@ -187,6 +186,5 @@ p {
   100% {
 	opacity:1.0;
         right:0pt auto;
-        left:100%;
   }
 }
